--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.css?_v=20250307145846" /> -->
-    <link rel="stylesheet" href="css/style.min.css?_v=20250307145846">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.css?_v=20250309112249" /> -->
+    <link rel="stylesheet" href="css/style.min.css?_v=20250309112249">
     <title>Main</title>
 </head>
 <body>
@@ -20,11 +20,11 @@
 
         <main class="page">
             <section class="page__item page__mainscreen mainscreen">
-                <div data-speed=".6" class="mainscreen__img">
+                <div class="mainscreen__img">
                     <picture><source srcset="img/notebook2.webp" type="image/webp"><img  src="img/notebook2.png" alt="Alt"></picture>
                 </div>
                 <div class="container">
-                    <div data-speed=".75" class="mainscreen__body">
+                    <div class="mainscreen__body">
                         <h1 class="mainscreen__title">Front-End Developer</h1>  
                     </div>
                 </div>
@@ -214,12 +214,12 @@
 
     </div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js?_v=20250307145846"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js?_v=20250307145846"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollToPlugin.min.js?_v=20250307145846"></script> -->
-	<script src="js/gsap/ScrollSmoother.min.js?_v=20250307145846"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js?_v=20250309112249"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js?_v=20250309112249"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollToPlugin.min.js?_v=20250309112249"></script> -->
+	<script src="js/gsap/ScrollSmoother.min.js?_v=20250309112249"></script>
     
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.js?_v=20250307145846"></script> -->
-    <script src="js/app.min.js?_v=20250307145846"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.js?_v=20250309112249"></script> -->
+    <script src="js/app.min.js?_v=20250309112249"></script>
 </body>
 </html>
